# cargo-ui-cli

./: Cargo.toml  README.md  run.sh
cargo-ui/: README.md  package-lock.json  package.json  vue.config.js
cargo-ui/cargo-ui-server/: Cargo.toml
cargo-ui/cargo-ui-server/src/: cors.rs  main.rs
cargo-ui/src/: App.vue
src/: main.rs
