[package]
name = "cargo-ui-cli"
version = "0.1.0"
authors = ["jakobneufeld <jakob.n.neufeld@gmail.com>"]
edition = "2018"
repository = "https://github.com/jakobneufeld/cargo-ui-cli.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = '0.13.4'
